--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A coding space and showcase for all TrueCoders",
   "main": "dist/server.js",
   "scripts": {
+    "dev": "nodemon src/server/server.js",
     "test": "jest"
   },
   "repository": {
@@ -17,6 +18,15 @@
   },
   "homepage": "https://github.com/Bryantellius/tc-node-5#readme",
   "dependencies": {
-    "bulma": "^0.9.3"
+    "bulma": "^0.9.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.14"
   }
 }
